2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15594. Patch by Hani Benhabiles.

	* src/comm.c (plug_is_newstyle): New function to check if plugin has all
	newly added tags (summary, affected, insight, detection, impact,
	solution).
	(send_plug_info): Send NODESC instead of whole description when plugin
	has all new style tags.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15585. Patch by Timo Pollmeier.

	* tools/greenbone-nvt-sync (RSYNC_DELETE): Remove quotes causing
	exclude of private directory to be ignored.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15561. Patch by Timo Pollmeier.

	* tools/greenbone-nvt-sync: Update version number.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15558. Patch by Timo Pollmeier.

	* tools/greenbone-nvt-sync: Add PRIVATE_SUBDIR and private directory
	functionality to RSYNC_DELETE.

2013-02-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/openvassd.c (main): Update year in copyright notice.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.4+beta3.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	Move "-Werror" flag to the "Debug" build type.

	* CMakeLists.txt: Move "-Werror" from CMAKE_C_FLAGS to
	CMAKE_C_FLAGS_DEBUG to keep it out of the "Release" build type.

2013-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* CHANGES: Updated.

2013-02-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 3.4+beta2 release.

	* CHANGES: Updated.

2013-02-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Refactor code to remove fixed size of
	string regrouping nvt elements and calculate size dynamically.
	Rename variables to be more readable.

2013-02-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>
