@@ -1,3 +1,11 @@
+2013-03-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	Backport r15596. Patch by Hani Benhabiles.
+
+	* src/comm.c (send_plug_info): Send NOSUMMARY instead of whole summary
+	when script tag summary is present.
+	(plug_is_newstyle): Rename to plugin_is_newstyle.
+
 2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	Backport r15594. Patch by Hani Benhabiles.
